--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "scripts": {
     "check-connection": "node_modules/.bin/ts-node main.ts",
+    "lint": "tslint --project tsconfig.json lib/**.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -33,6 +34,8 @@
   "devDependencies": {
     "@types/node": "^10.5.1",
     "ts-node": "^7.0.0",
+    "tslint": "^5.10.0",
+    "tslint-config-airbnb": "^5.9.2",
     "typescript": "^2.9.2"
   }
 }
