--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "mongo-data-generator",
   "version": "1.0.0",
   "description": "A GUI and CLI tool for generating mock MongoDB data",
-  "main": "main.js",
+  "preferGlobal": true,
+  "bin": {
+    "mongo-data": "./bin/index.js"
+  },
   "scripts": {
     "check-connection": "node_modules/.bin/ts-node main.ts",
     "lint": "tslint --project tsconfig.json lib/**.ts",
@@ -28,6 +31,7 @@
   "dependencies": {
     "@types/mongodb": "^3.1.1",
     "chalk": "^2.4.1",
+    "commander": "^2.16.0",
     "mongodb": "^3.1.0",
     "tslib": "^1.9.3"
   },
