--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongo-data-generator",
+  "name": "mongo-buddy",
   "version": "1.0.0",
   "description": "A GUI and CLI tool for generating mock MongoDB data",
   "preferGlobal": true,
