Ca/7 gen mock data model (#8)
* update .gitignore and project name in package.json

* add command and workflow to generate new model - no file yet

* initial model creation command

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mongo-data-generator",
+  "name": "mongo-buddy",
   "version": "1.0.0",
   "description": "A GUI and CLI tool for generating mock MongoDB data",
   "preferGlobal": true,
@@ -33,6 +33,6 @@
     "mongodb": "^3.1.0"
   },
   "devDependencies": {
-    "@types/node": "^10.5.1"
+    "@types/node": "^10.5.2"
   }
 }
