--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "bin": {
     "mongobuddy": "./bin/mongo-buddy.js"
   },
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -R landing"
   },
   "repository": {
     "type": "git",
@@ -33,6 +36,8 @@
     "mongodb": "^3.1.0"
   },
   "devDependencies": {
-    "@types/node": "^10.5.2"
+    "@types/node": "^10.5.2",
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0"
   }
 }
